# OnlineCourses

./: .gitignore  Dockerfile  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
app/: enam.py  exceptoins.py  main.py  user.py
app/api/: permissions.py  routers.py
app/api/endpoints/: content.py  courses.py
app/database/: database.py  models.py  utils.py
app/database/crud/: common.py  courses.py
app/schemas/: auth.py  courses.py
app/services/: courses.py  file_service.py
app/settings/: settings.py
