[tool.poetry]
name = "OnlineCourses"
version = "0.1.0"
description = "Online courses"
authors = ["Matvey Sergin"]

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
argon2-cffi = "23.1.0"
bcrypt = "4.2.0"
cryptography = "43.0.3"
dill = "0.3.9"
dnspython = "2.7.0"
email-validator = "2.2.0"
fastapi = "0.115.5"
fastapi-users = "14.0.0"
fastapi-users-db-sqlalchemy = "6.0.1"
greenlet = "3.1.1"
h11 = "0.14.0"
idna = "3.10"
asyncpg = "0.30.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.17"
SQLAlchemy = "2.0.36"
starlette = "0.41.2"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
PyJWT = "2.9.0"
uvicorn = "0.32.0"

[tool.poetry.dev-dependencies]
astroid = "3.3.5"
black = "24.10.0"
click = "8.1.7"
colorama = "0.4.6"
isort = "5.13.2"
makefun = "1.15.6"
mccabe = "0.7.0"
mypy = "1.13.0"
mypy-extensions = "1.0.0"
packaging = "24.2"
pathspec = "0.12.1"
platformdirs = "4.3.6"
pylint = "3.3.1"
sniffio = "1.3.1"
tomlkit = "0.13.2"
typing-extensions = "4.12.2"

[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.core.masonry.api"
